Version 5.1.0   unreleased

    * Bump up to GWT 2.7.0, AppEngine v1.9.17a, and CedarBuild v0.8.12.

Version 5.0.2   11 Nov 2014

    * Add Assertions.assertListEquals() and Assertions.assertMapEquals().

Version 5.0.1   08 Nov 2014

    * Update the README to be explicit about only supporting GWT 2.7 or better.

Version 5.0.0   08 Nov 2014

    * Change AbstractDropdownList interface to avoid conflicts with new GWT 2.7.x methods.
    * Change ListItem, OrderedList, UnorderedList to fix deprecations by using new-style Element.
    * Move up to newest version of various dependencies, since this is a major release.

Version 4.9.1   28 Oct 2014

    * Fix rendering problems with tabs if a bookmark is the first action after login.

Version 4.9.0   23 Oct 2014

    * Add new filter GwtCacheControlFilter to standardize caching for GWT files.

Version 4.8.1   26 Sep 2014

    * Upgrade to CedarBuild v0.8.10, just to stay up-to-date with latest code.
    * Be more strict about using Mockito's isA() in unit tests rather than any().

Version 4.8.0   22 Sep 2014

    * Change standard log4j date format to include time zone.
    * Bump up to AppEngine v1.9.11, since v1.8.8 is getting kind of old.

Version 4.7.0   16 Jul 2014

    * Package the RichTextToolbar from GWT's showcase.

Version 4.6.0   11 Jul 2014

    * Package external UTCDateBox and UTCTimeBox from Traction Software, to support Java 1.6.

Version 4.5.0   08 Jul 2014

    * Pull in SimplePager as external code to change private variables to protected.
    * Improve DataTablePager so the last page icon is disabled unless the page count is known.

Version 4.4.0   23 May 2014

    * Add constructors to InvalidDataException so we can provide both details and cause.
    * Improve validation handling within JaxbUtils, now throwing InvalidDataException.

Version 4.3.4   21 May 2014

    * Add new method JaxbUtils.generateSchema().
    * Add new method JaxbUtils.marshalDocument() that takes a schema location.
